--- a/app.css
+++ b/app.css
@@ -50,3 +50,15 @@ h1{
 .text-md{
     font-size: 16px;
 }
+
+@media only screen and (max-width: 768px) {
+    h1 {
+        font-size: 3rem;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    h1 {
+        line-height: 0.75;
+    }
+}
